@@ -207,6 +207,7 @@ protected:
   void getWMHints(void);
   void getMWMHints(void);
   void getBlackboxHints(void);
+  void getTransientInfo(void);
   void setNetWMAttributes(void);
   void associateClientWindow(void);
   void decorate(void);
