@@ -29,7 +29,10 @@ Changes from 0.62.1:
   - added emacs local variables to each file that prevent the addition of tabs
   - XGetInputFocus() is void yet we were using it in a if() test.
   - update transient handling, should solve issues with apps like acroread.
-    (well it didn't, but at least the code handles some situations better).
+    added a getTransientInfo() method of the BlackboxWindow class which handles
+    checking the transient state in X and setting the appropriate variables
+    on the window.  To further attach the infinite loops this function ensures
+    that client.transient != this.
   - added zh_TW (Taiwan Chinese)
 
 Changes from 0.62.0 to 0.62.1:
